Fixed Safari layout issues

--- a/tatianastore/static/main.css
+++ b/tatianastore/static/main.css
@@ -86,7 +86,14 @@ main.container {
 }
 
 .song {
+    display: -webkit-box;
+    display: -webkit-flexbox;
     display: flex;
+    /*
+    -webkit-box-orient: horizontal;
+    -webkit-box-pack: left;
+    -webkit-box-align: left;*/
+   -webkit-align-items: flex-start;
     -moz-box-align: start;
     align-items: flex-start;
 }
@@ -94,6 +101,7 @@ main.container {
 .song-name {
     -moz-box-flex: 1;
     -webkit-box-flex: 1;
+    -webkit-flex: 1;
     flex: 1 0 0px;
     margin: 10px 20px 10px 0;
     font-size: 18px;
@@ -112,7 +120,6 @@ main.container {
 }
 
 .song-controls {
-
 }
 
 .song-controls .btn-select {
